--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 header {
-    background-color: #111;
-    color: aliceblue;
+    background-color: #373838;
+    color: #88BBD0;
     padding: lem;
     font-family: Broadway;
     text-align: center;
@@ -11,7 +11,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #909090;
 }
 
 li {
@@ -20,19 +20,19 @@ li {
 
 li a {
     display: block;
-    color: white;
+    color: #909090;
     text-align: center;
     padding: 0.7rem 0.7rem;
     text-decoration: none;
 }
 
 li a:hover {
-    background-color: #111;
+    background-color: #373838;
 }
 
 footer {
-    background-color: #111;
-    color: white;
+    background-color: #373838;
+    color: #88BBD0;
     padding: 0.7rem;
     text-align: center;
 }
