--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ header {
     background-color: #373838;
     color: #88BBD0;
     padding: lem;
-    font-family: Broadway;
+    font-family: Gotham Bold;
     text-align: center;
 }
 
@@ -20,7 +20,7 @@ li {
 
 li a {
     display: block;
-    color: #909090;
+    color: white;
     text-align: center;
     padding: 0.7rem 0.7rem;
     text-decoration: none;
@@ -33,6 +33,7 @@ li a:hover {
 footer {
     background-color: #373838;
     color: #88BBD0;
+    font-family: Gotham Book;
     padding: 0.7rem;
     text-align: center;
 }
