--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,12 @@
 header {
     background-color: #373838;
     color: #88BBD0;
-    padding: lem;
+    padding: 1em;
     font-family: 'Comfortaa', cursive;
     text-align: center;
 }
+h2  {
+    margin: 0;
 
 ul {
     list-style-type: none;
@@ -35,6 +37,7 @@ li a:hover {
 body {
     font-family: 'Comfortaa', cursive;
     text-align: center;
+    padding-block-start: 5em;
 }
 
 footer {
