--- a/stylesproject.css
+++ b/stylesproject.css
@@ -11,11 +11,6 @@ header {
 h2  {
     margin: 0;
 }
-h3  {
-    font-size: 3em ;
-    font-family: 'Comfortaa', cursive;
-    text-align: center;
-}
 p {
     display: block;
     margin-block-start: 1em;
@@ -52,6 +47,16 @@ body {
     padding-block-start: 1em; 
     padding-block-end: 1em;
 }
+.navigation2 {
+    float: center;
+}
+.navigation3 {
+    float: center;
+}
+.navigation4 {
+    float: center;
+}
+
 
 footer {
     background-color: #373838;
